--- a/1° semestre/HTML/24-04/exercicio1/App/home/home.css
+++ b/1° semestre/HTML/24-04/exercicio1/App/home/home.css
@@ -33,7 +33,6 @@ article{
     border-radius: 30px;
     text-align: center;
     padding: 2%;
-    height: 200px;
 }
 
 .pesquisar{
@@ -59,5 +58,40 @@ footer{
 
 h4{
     color: white;
+}
 
+@media (min-width: 0px) and (max-width: 767.99px) {
+    .lateral{
+        visibility: hidden;
+        height: 10px;
+        width: 10px;
+        
+    }
+
+    footer{
+        margin-top: 80vh;
+    }
+
+    nav{
+        height: 150px;
+    }
+}
+
+/*Medium devices (tablets, 768px e superior)*/
+@media (min-width: 768px ) {
+    
+}
+
+/*Large devices (desktops, 992px e superior)*/
+@media (min-width: 992px) {
+    /*body {
+        background: yellow;
+    }*/
+}
+
+/*Extra large devices (large desktops, 1200px e superior)*/
+@media (min-width: 1200px) {
+    /*body {
+        background: gray;
+    }*/
 }
