--- a/1° semestre/HTML/24-04/exercicio1/App/contato/contato.css
+++ b/1° semestre/HTML/24-04/exercicio1/App/contato/contato.css
@@ -50,3 +50,41 @@ h4{
     color: white;
 
 }
+
+@media (min-width: 0px) and (max-width: 767.99px) {
+
+    footer{
+        margin-top: 80vh;
+    }
+
+    nav{
+        height: 150px;
+    }
+}
+
+/*Medium devices (tablets, 768px e superior)*/
+@media (min-width: 768px ) {
+
+    footer{
+        margin-top: 55vh;
+    }
+
+    nav{
+        height: 150px;
+    }
+    
+}
+
+/*Large devices (desktops, 992px e superior)*/
+@media (min-width: 992px) {
+    /*body {
+        background: yellow;
+    }*/
+}
+
+/*Extra large devices (large desktops, 1200px e superior)*/
+@media (min-width: 1200px) {
+    /*body {
+        background: gray;
+    }*/
+}
